fix scrollbar of skills

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -399,6 +399,8 @@ main {
     max-height: 100dvh; /* iOS dynamic viewport height */
     overflow-y: auto;
 
+		
+
 		@include mobile {
 			padding: $spacing-mobile 0 2.5rem;
 		}
@@ -407,7 +409,6 @@ main {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
-			overflow-y: scroll;
 
 			@include mobile {
 				flex-direction: row;
